changed user variable

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,7 +1,7 @@
 ---
 # defaults file for onr-prometheus-nodexp
-onr_prometheus_nodexp_user: "{{ ansible_user }}"
-onr_prometheus_nodexp_group: "{{ ansible_user }}"
+onr_prometheus_nodexp_user: "{{ ansible_user_id }}"
+onr_prometheus_nodexp_group: "{{ ansible_user_id }}"
 
 onr_prometheus_nodexp_binary_url: https://github.com/prometheus/node_exporter/releases/download/v0.17.0/node_exporter-0.17.0.linux-amd64.tar.gz
 onr_prometheus_nodexp_binary_name: node_exporter-0.17.0
@@ -10,4 +10,4 @@ onr_prometheus_nodexp_install_folder: /home/{{ onr_prometheus_nodexp_user }}/opt
 
 onr_prometheus_nodexp_systemd_enable: "{{ system_capability_systemd | default(True) }}"
 
-onr_prometheus_nodexp_systemd_folder: /home/{{ ansible_user }}/systemd
+onr_prometheus_nodexp_systemd_folder: /home/{{ ansible_user_id }}/systemd
